# c_oop

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: api.cmake
include/: debug.c  debug.h
src/: c_oop.c  c_oop.h  constant.h  hashtable.c  hashtable.h  macro.h
src/reflection/: reflection.h
test/: test_copy.c  test_log.c  test_poly.c  test_private.c  user.c
